Attempt to fix page scrolling on mobile

--- a/css/game.css
+++ b/css/game.css
@@ -8,7 +8,7 @@ body
 {
   overflow-x: hidden;
   overflow-y: hidden;
-  position: relative;
+  position: fixed;
 }
 
 .GameHolder
